Sun Feb 23 17:55:50 2014  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/xmltokens.rb: Add missing non ASCII valid characters
	  to element name characters. Now, REXML name tokens exactly
	  match "[5] Name" in the XML spec and "[4] NCName" in the
	  Namespaces in XML spec. See comment about the details.
	  [Bug #9539]  [ruby-core:60901]
	  Reported by Mario Barcala. Thanks!!!

	* test/rexml/xpath/test_node.rb: Add tests for the above case.

Sun Feb 23 12:18:54 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/raddrinfo.c (inet_pton): use rb_w32_inet_pton, instead of
	  inet_pton directly, which is unavailable on older version Windows.

	* include/ruby/win32.h, win32/win32.c (rb_w32_inet_pton): add a
	  wrapper function for inet_pton minimum supported client is
	  Vista, as well as inet_ntop.

Sun Feb 23 11:33:25 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/net/imap/test_imap.rb: remove unused variables.
	* test/net/imap/test_imap_response_parser.rb: ditto.
	* test/net/pop/test_pop.rb: ditto.

Sun Feb 23 02:19:51 2014  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (bind_random_port): Rescue EPERM for FreeBSD which
	  security.mac.portacl.port_high is changed.
	  See mac_portacl(4) for details.
	  Reported by Jakub Szafranski.  [ruby-core:60917] [Bug #9544]

Sat Feb 22 23:17:01 2014  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/xpath_parser.rb: Fix indent.

Sat Feb 22 23:15:35 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/xpath/test_attribute.rb: Simplify.

Sat Feb 22 20:28:47 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: more friendly.

Sat Feb 22 20:24:43 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_xpath*.rb: Move to ...
	* test/rexml/xpath/*.rb: ... here.

Sat Feb 22 20:04:41 2014  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/listener.rb: Untabify.

Sat Feb 22 19:07:31 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/io/console/console.c (console_dev): need read access for conout$