@@ -3,18 +3,18 @@
 
 struct vtm {
     VALUE year; /* 2000 for example.  Integer. */
-    int mon; /* 1..12 */
-    int mday; /* 1..31 */
-    int hour; /* 0..23 */
-    int min; /* 0..59 */
-    int sec; /* 0..60 */
     VALUE subsecx; /* 0 <= subsecx < TIME_SCALE.  possibly Rational. */
     VALUE utc_offset; /* -3600 as -01:00 for example.  possibly Rational. */
-    int wday; /* 0:Sunday, 1:Monday, ..., 6:Saturday */
-    int yday; /* 1..366 */
-    int isdst; /* 0:StandardTime 1:DayLightSavingTime */
     const char *zone; /* "JST", "EST", "EDT", etc. */
-};
+    uint16_t yday:9; /* 1..366 */
+    uint8_t mon:4; /* 1..12 */
+    uint8_t mday:5; /* 1..31 */
+    uint8_t hour:5; /* 0..23 */
+    uint8_t min:6; /* 0..59 */
+    uint8_t sec:6; /* 0..60 */
+    uint8_t wday:3; /* 0:Sunday, 1:Monday, ..., 6:Saturday 7:init */
+    uint8_t isdst:2; /* 0:StandardTime 1:DayLightSavingTime 3:init */
+} PACKED_STRUCT;
 
 #define TIME_SCALE 1000000000
 
